--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -1,17 +1,14 @@
 {% extends '_layouts/base.njk' %}
 
-{% block page_title %}New index page title{% endblock %}
+{% block page_title %}Oh SHip{% endblock %}
 
 {% block content %}
 
 <div class="container">
   <div class="row">
-    <div class="col">
-    <h1>Main headline</h1>
-    <p class="author">By {% for author in authors %}
-      <a href="{{ author.link }}" target="_blank">{{ author.name }}</a>{% if not loop.last %}{% if loop.revindex0 == 1 %} and {% else %}, {% endif %}{% endif %} {% endfor %}
-      <br> Published {{ publish_date }}
-    </p>
+    <div class="col-md-6 col-lg-8">
+    <h1>We are taking a journey on a ship! How nice!</h1>
+      <p> Published {{ publish_date }}</p>
     </div>
   </div>
   <div class="row">
@@ -19,13 +16,11 @@
       <p>
         Lucas ipsum dolor <a href="detail-page.html">link to detail-page.html</a> amidala sith dooku solo moff organa obi-wan windu. Gamorrean binks wedge darth. Mon darth mon kit ponda solo. Moff watto ackbar mothma moff anakin. Lando skywalker lars fett calrissian lars organa. Organa kenobi wedge darth jawa skywalker anakin. Twi'lek kit darth calamari lando kamino droid. Darth jawa fett grievous maul. Palpatine obi-wan leia tusken raider dagobah. Twi'lek qui-gon boba antilles yoda thrawn. Wampa luuke wampa skywalker. Moff ponda ackbar dagobah kit lobot jinn solo.
       </p>
-      <ul> 
-        {% for book in data.books %}
-          <li>{{ book.title }}, {{ book.author }}</li>
-        {% else %}
-          <li>This would display if the 'books' collection were empty</li>
-        {% endfor %}
-     </ul>
+  {% for entry in data.entries %}
+  <h3 class="entry-headline"><a href="{{ entry.url }}">{{ entry.title }}</a></h3>
+  <p class="entry-date">{{ entry.date }}</p>
+  <hr>
+{% endfor %}
     </div>
   </div>
 </div>
