--- a/src/njk/_layouts/base.njk
+++ b/src/njk/_layouts/base.njk
@@ -2,7 +2,7 @@
 <html lang="en">
 <!-- A Intro to Coding for Journalists class project -->
 <head>
-  <title>Pirate Captain's Blog | {% block page_title %}Default title{% endblock %}</title>
+  <title>Pirate Captain's Blog | {% block page_title %} It's A Blog! {% endblock %}</title>
   <meta name="description" content="{% block page_description %}Default description{% endblock %}">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
