--- a/src/njk/_partials/jumbotron.njk
+++ b/src/njk/_partials/jumbotron.njk
@@ -1,4 +1,4 @@
 <div class="jumbotron banner text-center">
   <h1>The Ship's Log</h1>
-  <p>A diary by Capt. Crit McGillicutty</p> 
+  <p>A diary by Capt. Taylor Sprinkle</p> 
 </div>
